# polyhedral-gravity-model

./: CMakeLists.txt  README.md  setup.py
.github/workflows/: ctest.yml
cmake/: gtest.cmake  spdlog.cmake  tbb.cmake  tetgen.cmake  yaml.cmake
docs/: CMakeLists.txt  conf.py  index.rst  quick_start_cpp.rst  quick_start_python.rst
docs/api/: model.rst
example-config/: example.yaml  example_cube.yaml  example_eros.yaml  example_tsoulis2.yaml
example-config/data/: cube.face  cube_origin.node  tsoulis.face
python-binding/: CMakeLists.txt  python-interface.cpp
script/: analytical_cube_gravity.py  cube_integral.py  mesh.py  polyhedral-gravity.ipynb
script/test-python/: test_python_interface.py
src/: main.cpp
src/polyhedralGravity/calculation/: Gravity.cpp  Gravity.h  GravityModel.cpp  GravityModel.cu  GravityModel.h
src/polyhedralGravity/gravity/: Gravity.cpp  Gravity.h
src/polyhedralGravity/input/: ConfigSource.h  DataSource.h  TetgenAdapter.cpp  TetgenAdapter.h  YAMLConfigReader.cpp  YAMLConfigReader.h
src/polyhedralGravity/model/: GravityModelData.h  GravityResult.h  Polyhedron.cpp  Polyhedron.h
src/polyhedralGravity/output/: CSVWriter.h  Logging.cpp  Logging.h
src/polyhedralGravity/util/: UtilityConstants.h  UtilityContainer.h  UtilitySimd.h
test/: CMakeLists.txt  SimpleTest.cpp
test/calculation/: GravityModelBigTest.cpp  GravityModelCubeTest.cpp  GravityModelTest.cpp  GravityModelVectorUtility.cpp  GravityTest.cpp
test/input/: TetgenAdapterTest.cpp
test/resources/: GravityModelBigTest.face  GravityModelBigTest.node  GravityModelBigTestExpectedBetaSingularities.txt  TetgenAdapterTestReadSimple.node  TetgenAdapterTestReadSimple.ply  analytic_cube_solution.txt
test/util/: UtilityContainerTest.cpp
